--- a/TODO
+++ b/TODO
@@ -1,4 +1,5 @@
-- clanky z smoliicek.tk/blog
-- spravne datumy (pomoci git history)
-- nejak to deploynout na vercel/cloudflare
-- profit
+- clanky z smoliicek.tk/blog - Done
+- spravne datumy (pomoci git history) 
+- nejak to deploynout na vercel/cloudflare - Done
+- dodělat svůj avatar + logo stránky dík
+- profit - no profit cuz no github donos :((
